[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=1]
[ext_resource path="res://Scripts/EXPERIMENTS SCRIPTS/GAMEPLAY_Vehicle.gd" type="Script" id=2]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86.png" type="Texture2D" id=3]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86Bottom.png" type="Texture2D" id=4]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86Door.png" type="Texture2D" id=5]
[ext_resource path="res://Scripts/EXPERIMENTS SCRIPTS/Gameplay_Veh_Door.gd" type="Script" id=6]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/sprSmallTire_strip6.png" type="Texture2D" id=7]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86/AE86_3200rpm.wav" type="AudioStream" id=8]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86/AE86_2300rpm.wav" type="AudioStream" id=9]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86/AE86_engine_start.wav" type="AudioStream" id=10]
[ext_resource path="res://Data/EXPERIMENTS/Drivable vehicle/AE86/AE86_6400rpm.wav" type="AudioStream" id=11]
[ext_resource path="res://Scripts/EXPERIMENTS SCRIPTS/Gameplay_Veh_Seat.gd" type="Script" id=12]
[ext_resource path="res://Scripts/EXPERIMENTS SCRIPTS/Gameplay_Veh_engine_audio.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 21, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 21, 0, 21, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 42, 0, 21, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 63, 0, 21, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 84, 0, 21, 7 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 105, 0, 21, 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 13 )

[sub_resource type="Animation" id=10]
resource_name = "Engine"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("2300rpm:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.33, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0, 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("2300rpm:current_pitch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.4, 0.99 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 1.0, 1.5, 0.01 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("3200rpm:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.25, 0.6, 0.83 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -80.0, 0.0, 0.0, -30.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("3200rpm:current_pitch")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.6, 0.64 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("4700rpm:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 0.55, 0.83, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0, 0.0, -80.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("4700rpm:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0.55, 0.83 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("6400rpm:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.82, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -40.0, 0.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("6400rpm:current_pitch")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PackedFloat32Array( 0.05, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.25 ]
}

[node name="AE86" type="Node2D"]
script = ExtResource( 2 )
engine_start_rpm = 2300
idle_rpm = 1400
throttle = 400
max_rpm = 8100
sound_library = [ [ NodePath("Smoothing2D/2300rpm"), 2300 ], [ NodePath("Smoothing2D/3200rpm"), 3200 ], [ NodePath("Smoothing2D/4700rpm"), 4700 ], [ NodePath("Smoothing2D/6400rpm"), 6400 ] ]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 0
collision_mask = 39

[node name="ColEnterable" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array( -10, -1, 17, -1, 17, -23, 39, -23, 39, -22, 47, -22, 47, -21, 50, -21, 50, -20, 51, -20, 51, -18, 52, -18, 52, 18, 51, 18, 51, 20, 50, 20, 50, 21, 47, 21, 47, 22, 39, 22, 39, 23, 17, 23, 17, 1, -10, 1, -10, 23, -40, 23, -40, 22, -49, 22, -49, 21, -50, 21, -50, 20, -51, 20, -51, -20, -50, -20, -50, -21, -49, -21, -49, -22, -39, -22, -39, -23, -10, -23 )

[node name="ColDoor" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array( -10, -23, -10, -19, 17, -19, 17, -23 )

[node name="ColDoor2" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array( -10, 19, -10, 23, 17, 23, 17, 19 )

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 1 )
target = NodePath("../CharacterBody2D")
flags = 7

[node name="TireLeft" type="AnimatedSprite2D" parent="Smoothing2D"]
position = Vector2( 30, -17 )
z_index = -1
frames = SubResource( 3 )
playing = true
offset = Vector2( -0.5, -2.5 )

[node name="TireRight" type="AnimatedSprite2D" parent="Smoothing2D"]
position = Vector2( 30, 16 )
z_index = -1
frames = SubResource( 3 )
playing = true
offset = Vector2( -0.5, 2.5 )

[node name="Seat" type="Node2D" parent="Smoothing2D"]
position = Vector2( -1, -5 )
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="Smoothing2D/Seat"]
position = Vector2( 0, -2 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Smoothing2D/Seat/Area2D"]
position = Vector2( 3, -6 )
shape = SubResource( 1 )

[node name="Door" type="Node2D" parent="Smoothing2D"]
position = Vector2( 17, -21 )
z_index = 1
script = ExtResource( 6 )
path_to_col = NodePath("../../CharacterBody2D/ColDoor")

[node name="Sprite2D" type="Sprite2D" parent="Smoothing2D/Door"]
texture = ExtResource( 5 )
centered = false
offset = Vector2( -30, -2 )

[node name="Area2D" type="Area2D" parent="Smoothing2D/Door"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Smoothing2D/Door/Area2D"]
position = Vector2( -14, -13 )
shape = SubResource( 2 )

[node name="Ae86Door2" type="Sprite2D" parent="Smoothing2D"]
position = Vector2( 17, 21 )
scale = Vector2( 1, -1 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -30, -2 )

[node name="Ae86" type="Sprite2D" parent="Smoothing2D"]
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0.5, 0 )

[node name="Ae86Bottom" type="Sprite2D" parent="Smoothing2D/Ae86"]
z_index = -2
texture = ExtResource( 4 )
offset = Vector2( 0.5, 0 )

[node name="Start_up" type="AudioStreamPlayer2D" parent="Smoothing2D"]
position = Vector2( 34, 0 )
stream = ExtResource( 10 )

[node name="2300rpm" type="AudioStreamPlayer2D" parent="Smoothing2D"]
position = Vector2( 36, 0 )
stream = ExtResource( 9 )
volume_db = -80.0
pitch_scale = 0.01
script = ExtResource( 13 )
current_pitch = 0.01

[node name="3200rpm" type="AudioStreamPlayer2D" parent="Smoothing2D"]
position = Vector2( 34, 0 )
stream = ExtResource( 8 )
volume_db = -80.0
script = ExtResource( 13 )

[node name="4700rpm" type="AudioStreamPlayer2D" parent="Smoothing2D"]
position = Vector2( 34, 0 )
stream = ExtResource( 8 )
volume_db = -80.0
script = ExtResource( 13 )

[node name="6400rpm" type="AudioStreamPlayer2D" parent="Smoothing2D"]
position = Vector2( 34, 0 )
stream = ExtResource( 11 )
volume_db = -80.0
pitch_scale = 1.00263
script = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Smoothing2D"]
playback_speed = 0.0
anims/Engine = SubResource( 10 )
